Added virtual destructor to Encoder class

--- a/docs/latex/classteam967_1_1_encoder.tex
+++ b/docs/latex/classteam967_1_1_encoder.tex
@@ -13,6 +13,8 @@ Inheritance diagram for team967\+::Encoder\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
+virtual \mbox{\hyperlink{classteam967_1_1_encoder_aa7ef488b99581dd3be9fb29e13c84bf1}{$\sim$\+Encoder}} (void)
+\item 
 virtual void \mbox{\hyperlink{classteam967_1_1_encoder_a87d5ba1b4da3f42dbf53e27bd9bfe136}{set\+Count}} (int64\+\_\+t count)=0
 \item 
 virtual int64\+\_\+t \mbox{\hyperlink{classteam967_1_1_encoder_a64cca570f855528cace1319c3a3a7b90}{get\+Count}} (void)=0
@@ -31,6 +33,25 @@ virtual double \mbox{\hyperlink{classteam967_1_1_encoder_af0a0387532c37fba3de1d3
 
 \doxysubsection{Detailed Description}
 Virtual class that defines methods that should be implemented by all encoder objects. This was implemented so that motor controllers can have a unified way to access encoder data for more control options. 
+
+\doxysubsection{Constructor \& Destructor Documentation}
+\mbox{\Hypertarget{classteam967_1_1_encoder_aa7ef488b99581dd3be9fb29e13c84bf1}\label{classteam967_1_1_encoder_aa7ef488b99581dd3be9fb29e13c84bf1}} 
+\index{team967::Encoder@{team967::Encoder}!````~Encoder@{$\sim$Encoder}}
+\index{````~Encoder@{$\sim$Encoder}!team967::Encoder@{team967::Encoder}}
+\doxysubsubsection{\texorpdfstring{$\sim$Encoder()}{~Encoder()}}
+{\footnotesize\ttfamily virtual team967\+::\+Encoder\+::$\sim$\+Encoder (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [virtual]}}
+
+Virtual destructor to ensure derived class destructors get called.
+
+
+\begin{DoxyParams}{Parameters}
+{\em none} & \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+nothing 
+\end{DoxyReturn}
+
 
 \doxysubsection{Member Function Documentation}
 \mbox{\Hypertarget{classteam967_1_1_encoder_a64cca570f855528cace1319c3a3a7b90}\label{classteam967_1_1_encoder_a64cca570f855528cace1319c3a3a7b90}} 
