Redid docs to ensure they are up to date

--- a/docs/latex/classteam967_1_1_motor_controller.tex
+++ b/docs/latex/classteam967_1_1_motor_controller.tex
@@ -21,7 +21,7 @@ void \mbox{\hyperlink{classteam967_1_1_motor_controller_a7bae722085fadfd8b25595e
 \item 
 void \mbox{\hyperlink{classteam967_1_1_motor_controller_ada2d7b557cc73efcd0127d4d97c51e98}{attach\+Encoder}} (\mbox{\hyperlink{classteam967_1_1_encoder}{team967\+::\+Encoder}} $\ast$encoder)
 \item 
-\mbox{\hyperlink{classteam967_1_1_encoder}{team967\+::\+Encoder}} $\ast$ \mbox{\hyperlink{classteam967_1_1_motor_controller_a95a01286f9cc6915ebe539244aa76ff7}{get\+Encoder}} (void)
+\mbox{\hyperlink{classteam967_1_1_encoder}{team967\+::\+Encoder}} $\ast$ \mbox{\hyperlink{classteam967_1_1_motor_controller_a1874d22fcf2cae5619789ce23080a8c7}{get\+Encoder}} (void)
 \end{DoxyCompactItemize}
 
 
@@ -102,11 +102,11 @@ Begins PWM output using the channel and pin specified in the constructor. PWM du
 \begin{DoxyReturn}{Returns}
 nothing 
 \end{DoxyReturn}
-\mbox{\Hypertarget{classteam967_1_1_motor_controller_a95a01286f9cc6915ebe539244aa76ff7}\label{classteam967_1_1_motor_controller_a95a01286f9cc6915ebe539244aa76ff7}} 
+\mbox{\Hypertarget{classteam967_1_1_motor_controller_a1874d22fcf2cae5619789ce23080a8c7}\label{classteam967_1_1_motor_controller_a1874d22fcf2cae5619789ce23080a8c7}} 
 \index{team967::MotorController@{team967::MotorController}!getEncoder@{getEncoder}}
 \index{getEncoder@{getEncoder}!team967::MotorController@{team967::MotorController}}
 \doxysubsubsection{\texorpdfstring{getEncoder()}{getEncoder()}}
-{\footnotesize\ttfamily \mbox{\hyperlink{classteam967_1_1_encoder}{team967\+::\+Encoder}} \& team967\+::\+Motor\+Controller\+::get\+Encoder (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily \mbox{\hyperlink{classteam967_1_1_encoder}{team967\+::\+Encoder}} $\ast$ team967\+::\+Motor\+Controller\+::get\+Encoder (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
 
 Returns a pointer to the \mbox{\hyperlink{classteam967_1_1_encoder}{Encoder}} attached to this object.
 
